binrw/tests/ui/try_default_conflict.stderr
error: `try` is incompatible with `default`, `calc`, and `try_calc`
 --> tests/ui/try_default_conflict.rs:5:10
  |
5 |     #[br(try, default)]
  |          ^^^
